I changed the build target to .net core 3.1
I added UseRepositories and UseStrategies methods.

--- a/samples/CG.Business.QuickStart/appSettings.json
+++ b/samples/CG.Business.QuickStart/appSettings.json
@@ -2,7 +2,11 @@
   "Repositories": {
     "Strategy": "Test",
     "Test": {
-
+      "ApplyMigrations": false,
+      "DropDatabase": true,
+      "EnsureCreated": true,
+      "SeedDatabase": true,
+      "ConnectionString": "Server=.;Database=Blah;Trusted_Connection=True;MultipleActiveResultSets=true"
     }    
   }
 }
